[project]
name = "geonet-analyzer"
version = "0.1.0"
description = "Simulador e Analisador de Proximidade entre Unidades Geográficas"
authors = [{ name = "Emerson V. Rafael", email = "emersonssmile@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "loguru>=0.5.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
markers = [
    "geracao_base: Testes da geração da base simulada",
    "filtro_agencias: Testes do filtro de agências próximas",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
